cambio nome uc ricerca

--- a/DocumentiEsterni/AnalisiDeiRequisiti/src/CasiDUso/src/ApplicazioneWeb/src/GestioneMonitoraggioPostazioni.tex
+++ b/DocumentiEsterni/AnalisiDeiRequisiti/src/CasiDUso/src/ApplicazioneWeb/src/GestioneMonitoraggioPostazioni.tex
@@ -16,9 +16,9 @@
 \paragraph{UC-20.1 Visualizzazione postazione per codice identificativo}
 \begin{itemize}
     \item \textbf{Attori:} amministratore;
-    \item \textbf{Descrizione:} un amministratore pu\`{o} ricercare una postazione censita nel sistema tramite codice identificativo;
+    \item \textbf{Descrizione:} un amministratore pu\`{o} visualizzare una postazione censita nel sistema tramite codice identificativo;
     \item \textbf{Precondizione:} l'amministratore visualizza l'elenco di tutte le postazioni registrate nel sistema;
-    \item \textbf{Postcondizione:} l'amministratore ricerca un insieme di postazioni tramite filtro attivo  e visualizza la postazione cui codice identificativo è uguale a quello cercato. Se non esiste alcuna postazione avente il codice identificativo inserito dall'amministratore, non verrà visualizzato alcun risultato a video;
+    \item \textbf{Postcondizione:} l'amministratore ricerca un insieme di postazioni tramite filtro attivo e visualizza la postazione cui codice identificativo è uguale a quello cercato. Se non esiste alcuna postazione avente il codice identificativo inserito dall'amministratore, non verrà visualizzato alcun risultato a video;
     \item \textbf{Scenario principale:}
     \begin{itemize}
         \item l'amministratore applica il filtro nella lista di postazioni mostrate a video;
@@ -30,7 +30,7 @@
 \paragraph{UC-20.2 Visualizzazione postazioni prenotate}
 \begin{itemize}
     \item \textbf{Attori:} amministratore;
-    \item \textbf{Descrizione:} un amministratore pu\`{o} ricercare una postazione prenotata censita nel sistema;
+    \item \textbf{Descrizione:} un amministratore pu\`{o} visualizzare un insieme di postazioni prenotate censite nel sistema;
     \item \textbf{Precondizione:} l'amministratore visualizza l'elenco di tutte le postazioni registrate nel sistema;
     \item \textbf{Postcondizione:} l'amministratore ricerca un insieme di postazioni tramite filtro attivo e visualizza una elenco di postazioni cui stato è prenotato. Se non esiste alcuna postazione prenotata, non verrà visualizzato alcun risultato a video;
     \item \textbf{Scenario principale:}
@@ -43,7 +43,7 @@
 \paragraph{UC-20.3 Visualizzazione postazioni occupate}
 \begin{itemize}
     \item \textbf{Attori:} amministratore;
-    \item \textbf{Descrizione:} un amministratore pu\`{o} ricercare una postazione occupata censita nel sistema;
+    \item \textbf{Descrizione:} un amministratore pu\`{o} visualizzare un insieme di postazioni occupate censite nel sistema;
     \item \textbf{Precondizione:} l'amministratore visualizza l'elenco di tutte le postazioni registrate nel sistema;
     \item \textbf{Postcondizione:} l'amministratore ricerca un insieme di postazioni tramite filtro attivo e visualizza una elenco di postazioni cui stato è occupato. Se non esiste alcuna postazione occupata, non verrà visualizzato alcun risultato a video;
     \item \textbf{Scenario principale:}
@@ -56,7 +56,7 @@
 \paragraph{UC-20.4 Visualizzazione postazioni libere}
 \begin{itemize}
     \item \textbf{Attori:} amministratore;
-    \item \textbf{Descrizione:} un amministratore pu\`{o} ricercare una postazione libera censita nel sistema;
+    \item \textbf{Descrizione:} un amministratore pu\`{o} visualizzare un insieme di postazioni libere censite nel sistema;
     \item \textbf{Precondizione:} l'amministratore visualizza l'elenco di tutte le postazioni registrate nel sistema;
     \item \textbf{Postcondizione:} l'amministratore ricerca un insieme di postazioni tramite filtro attivo e visualizza una elenco di postazioni cui stato è libero. Se non esiste alcuna postazione libera, non verrà visualizzato alcun risultato a video;
     \item \textbf{Scenario principale:}
@@ -69,7 +69,7 @@
 \paragraph{UC-20.5 Visualizzazione postazioni igienizzate}
 \begin{itemize}
     \item \textbf{Attori:} amministratore;
-    \item \textbf{Descrizione:} un amministratore pu\`{o} ricercare una postazione igienizzata censita nel sistema;
+    \item \textbf{Descrizione:} un amministratore pu\`{o} visualizzare un insieme di postazioni igienizzate censite nel sistema;
     \item \textbf{Precondizione:} l'amministratore visualizza l'elenco di tutte le postazioni registrate nel sistema;
     \item \textbf{Postcondizione:} l'amministratore ricerca un insieme di postazioni tramite filtro attivo e visualizza una elenco di postazioni cui stato è igienizzato. Se non esiste alcuna postazione igienizzata, non verrà visualizzato alcun risultato a video;
     \item \textbf{Scenario principale:}
@@ -82,7 +82,7 @@
 \paragraph{UC-20.6 Visualizzazione postazioni sporche}
 \begin{itemize}
     \item \textbf{Attori:} amministratore;
-    \item \textbf{Descrizione:} un amministratore pu\`{o} ricercare una postazione sporca censita nel sistema;
+    \item \textbf{Descrizione:} un amministratore pu\`{o} visualizzare un insieme di postazioni sporche censite nel sistema;
     \item \textbf{Precondizione:} l'amministratore visualizza l'elenco di tutte le postazioni registrate nel sistema;
     \item \textbf{Postcondizione:} l'amministratore ricerca un insieme di postazioni tramite filtro attivo e visualizza una elenco di postazioni cui stato è sporco. Se non esiste alcuna postazione sporca, non verrà visualizzato alcun risultato a video;
     \item \textbf{Scenario principale:}
@@ -95,7 +95,7 @@
 \paragraph{UC-20.7 Visualizzazione postazioni abilitate}
 \begin{itemize}
     \item \textbf{Attori:} amministratore;
-    \item \textbf{Descrizione:} un amministratore pu\`{o} ricercare una postazione abilitata censita nel sistema;
+    \item \textbf{Descrizione:} un amministratore pu\`{o} visualizzare un insieme di postazioni abilitate censite nel sistema;
     \item \textbf{Precondizione:} l'amministratore visualizza l'elenco di tutte le postazioni registrate nel sistema;
     \item \textbf{Postcondizione:} l'amministratore ricerca un insieme di postazioni tramite filtro attivo e visualizza una elenco di postazioni cui stato è abilitato. Se non esiste alcuna postazione abilitata, non verrà visualizzato alcun risultato a video;
     \item \textbf{Scenario principale:}
@@ -108,7 +108,7 @@
 \paragraph{UC-20.8 Visualizzazione postazioni disabilitate}
 \begin{itemize}
     \item \textbf{Attori:} amministratore;
-    \item \textbf{Descrizione:} un amministratore pu\`{o} ricercare una postazione disabilitata censita nel sistema;
+    \item \textbf{Descrizione:} un amministratore pu\`{o} visualizzare una insieme di postazioni disabilitate censite nel sistema;
     \item \textbf{Precondizione:} l'amministratore visualizza l'elenco di tutte le postazioni registrate nel sistema;
     \item \textbf{Postcondizione:} l'amministratore ricerca un insieme di postazioni tramite filtro attivo e visualizza una elenco di postazioni cui stato è disabilitato. Se non esiste alcuna postazione disabilitata, non verrà visualizzato alcun risultato a video;
     \item \textbf{Scenario principale:}
