--- a/DocumentiEsterni/AnalisiDeiRequisiti/src/Attori/main.tex
+++ b/DocumentiEsterni/AnalisiDeiRequisiti/src/Attori/main.tex
@@ -1,13 +1,13 @@
-\subsection{Attori primari}
+
 \begin{itemize}
     \item \textbf{utente non registrato:} utente che non possiede un account nel sistema;
-    \item \textbf{utente non autenticato:} utente registrato che deve ancora eseguire l'accesso;
+    \item \textbf{utente non autenticato:} utente registrato che deve ancora eseguire l'accesso. A seconda delle credenziali possedute può autenticarsi come uno dei ruoli d seguito elencati.
 
     \item \textbf{amministratore:}
     \begin{itemize}
         \item utente registrato ed autenticato presso l'applicazione web; 
         \item pu\`{o} gestire e monitorare gli utenti, le postazioni e le stanze;
-        \item può accedere all'applicazione mobile;
+        \item può accedere all'applicazione mobile.
     \end{itemize}
 
     \item \textbf{igienizzatore:}
@@ -15,7 +15,7 @@
         \item utente registrato ed autenticato presso l'applicazione mobile;
         \item addetto esclusivamente all'igienizzazione delle postazioni/stanze; 
         \item non può accedere all'applicazione web; 
-        \item può visualizzare le stanze da pulire e marcarle come igienizzate;
+        \item può visualizzare le stanze da pulire e marcarle come igienizzate.
     \end{itemize} 
 
     \item \textbf{dipendente:}
