--- a/DocumentiEsterni/AnalisiDeiRequisiti/src/CasiDUso/src/ApplicazioneWeb/src/GestioneAutenticazione.tex
+++ b/DocumentiEsterni/AnalisiDeiRequisiti/src/CasiDUso/src/ApplicazioneWeb/src/GestioneAutenticazione.tex
@@ -34,7 +34,7 @@
   
     \item \textbf{Scenario principale:}
           \begin{enumerate}
-            \item l'utente iserisce la propria mail;
+            \item l'utente inserisce il proprio indirizzo email;
             \item l'utente inserisce la propria password;
             \item l'utente conferma l'inserimento;
             \item il sistema elabora i dati ed in caso di credenziali errate restituisce un messaggio d'errore esplicativo (UC-2 Errore: coppia di credenziali non riconosciuta), altrimenti procede con la richiesta.
@@ -49,7 +49,7 @@
 \begin{itemize}
 	\item \textbf{Attore primario:} utente non autenticato;
 
-	\item \textbf{Descrizione:} l'applicazione web riconosce solamente le credenziali appartenenti ad un amministratore;l'utente ha provato ad effettuare il login da applicazione web ma ha inserito una coppia di credenziali non valida;
+	\item \textbf{Descrizione:} l'applicazione web riconosce solamente le credenziali appartenenti ad un amministratore; l'utente ha provato ad effettuare il login da applicazione web ma ha inserito una coppia di credenziali non valida;
 
 	\item \textbf{Precondizioni:} l'utente ha inserito un indirizzo e-mail e una password errati (o non appartenenti ad un amministratore) ed ha inviato i dati inseriti;
 
