--- a/DocumentiEsterni/AnalisiDeiRequisiti/src/Introduzione/main.tex
+++ b/DocumentiEsterni/AnalisiDeiRequisiti/src/Introduzione/main.tex
@@ -27,15 +27,22 @@ risposte agli obblighi normativi:
 Nel documento sono presenti alcuni termini marcati in corsivo con una \emph{G} a pedice; tale notazione sta ad indicare che \'{e} presenta la definizione di tali termini \'{e} presente nel documento \Gv{} allegato.
 
 \subsection{Riferimenti}
+
+\subsubsection{Normativi}
+\begin{itemize}
+    \item \textbf{\NdPv};
+    \item ISO/IEC/IEEE 12207:1995: \url{https://www.math.unipd.it/~tullio/IS-1/2009/Approfondimenti/ISO_12207-1995.pdf};
+    \item IEEE Std 830 1998: \url{https://ieeexplore.ieee.org/document/720574}.
+\end{itemize}
+
+\subsubsection{Informativi}
 \begin{itemize}
     \item presentazione capitolato C1:
     \begin{itemize} 
-        \item \url{https://www.math.unipd.it/~tullio/IS-1/2020/Progetto/C1.pdf}
-        \item \url{https://www.youtube.com/watch?v=X_KintgpWc8&feature=youtu.be}
+        \item \url{https://www.math.unipd.it/~tullio/IS-1/2020/Progetto/C1.pdf};
+        \item \url{https://www.youtube.com/watch?v=X_KintgpWc8&feature=youtu.be}.
     \end{itemize}
-    \item materiale didattico presentato a lezione durante il corso di Ingegneria del Software: \url{https://www.math.unipd.it/~tullio/IS-1/2020/}
-    \item ISO/IEC/IEEE 12207:1995: \url{https://www.math.unipd.it/~tullio/IS-1/2009/Approfondimenti/ISO_12207-1995.pdf}
-    \item IEEE Std 830 1998: \url{https://ieeexplore.ieee.org/document/720574}
-    \item incontro con il proponente verbalizzato il 18-12-2020.
-    \item \textbf{\NdP} \textbf{v1.0.0}
+    \item materiale didattico presentato a lezione durante il corso di Ingegneria del Software: \url{https://www.math.unipd.it/~tullio/IS-1/2020/}.
+    
+    
 \end{itemize}
