--- a/DocumentiEsterni/AnalisiDeiRequisiti/src/RegistroModifiche.tex
+++ b/DocumentiEsterni/AnalisiDeiRequisiti/src/RegistroModifiche.tex
@@ -14,12 +14,17 @@
     % usare \responsabile per indicare responsabile
 
     %		L'ultimo evento deve essere sempre all'inizio della tabella
-    1.0.0                  & 2021-01-05                                       & Responsabile                                & Elvis Murtezan                                      & \responsabile{} \\
+
+    1.0.2                  & 2021-02-29                                       & Aggiornamento §4.1.1, §4.1.2                         & Giovanni Grigoletto                                      & \analista{}    \\
+
+    1.0.1                  & 2021-02-25                                        & Ristrutturazione indice ed elenco dei casi d'uso                              & Alessio Trevisan, Edoardo Caregnato, Giovanni Grigoletto & \analista{}    \\
+
+    1.0.0                  & 2021-01-05                                       & Approvazione                                & Elvis Murtezan                                      & \responsabile{} \\
 
     0.1.0                  & 2021-01-04                                       & Verifica                                    & Elvis Murtezan, Giovanni Grigoletto                 & \verificatore{} \\
 
-    0.0.2                  & 2021-01-3                                        & stesura §4, §5                              & Alessio Trevisan, Edoardo Caregnato, Filippo Pinton & \analista{}    \\
+    0.0.2                  & 2021-01-3                                        & Stesura §4, §5                              & Alessio Trevisan, Edoardo Caregnato, Filippo Pinton & \analista{}    \\
 
-    0.0.1                  & 2020-12-23                                       & stesura §1, §2, §3                          & Filippo Pinton                                      & \analista{}    \\
+    0.0.1                  & 2020-12-23                                       & Stesura §1, §2, §3                          & Filippo Pinton                                      & \analista{}    \\
 \end{longtable}
 }
