--- a/DocumentiEsterni/AnalisiDeiRequisiti/src/DescrizioneGenerale/main.tex
+++ b/DocumentiEsterni/AnalisiDeiRequisiti/src/DescrizioneGenerale/main.tex
@@ -1,10 +1,10 @@
 \subsection{Funzionalit\`{a} del prodotto}
 Il sistema \emph{\NomeProgetto} offir\`{a} le seguenti funzionalit\`{a}:
 \begin{itemize}
-    \item una piattaforma web accessibile solamente agli amministratori che permetta: di monitorare le postazioni occupate, prenotate, da pulire e pulite. Da qui \`{e} inoltre possibile esportare un report delle pulizie per ogni singola postazione o per stanza;
-    \item una applicazione per smartphone che permetta di consultare la lista delle postazioni e di prenotare quelle libere, oltre che di segnalarne la pulizia.
+    \item una piattaforma web accessibile solamente agli amministratori che permetta di gestire e monitorare stanze, postazioni ed utenti;
+    \item un'applicazione mobile che permetta di consultare la lista delle postazioni disponibili e di effettuare prenotazioni, oltre che di segnalarne la pulizia.
 \end{itemize}
 
 \subsection{Vincoli}
 Per progettare la soluzione è stato previsto, come assunto di base non derogabile, il fatto che le persone
-da tracciare ed i dipendenti dell’azienda specializzata siano in possesso di uno smartphone (\glo{Android} o \glo{iOS}) e nelle condizioni di installare un’applicazione.
+da tracciare ed i dipendenti dell’azienda specializzata siano in possesso di uno smartphone con piattaforma \glo{Android} e nelle condizioni di installare un’applicazione.
