--- a/DocumentiEsterni/AnalisiDeiRequisiti/src/CasiDUso/src/ApplicazioneWeb/src/GestioneMonitoraggioStanze.tex
+++ b/DocumentiEsterni/AnalisiDeiRequisiti/src/CasiDUso/src/ApplicazioneWeb/src/GestioneMonitoraggioStanze.tex
@@ -12,7 +12,7 @@
 \end{itemize}
 
 
-\paragraph{UC-11.1 Ricerca stanza per codice identificativo}
+\paragraph{UC-11.1 Visualizzazione stanza per codice identificativo}
 \begin{itemize}
     \item \textbf{Attori:} amministratore;
     \item \textbf{Descrizione:} un amministratore pu\`{o} visualizzare a video una stanza corrispondente al codice identificativo cercato;
@@ -25,7 +25,7 @@
     \end{itemize}
 \end{itemize}
 
-\paragraph{UC-11.2 Ricerca stanze abilitate}
+\paragraph{UC-11.2 Visualizzazione stanze abilitate}
 \begin{itemize}
     \item \textbf{Attori:} amministratore;
     \item \textbf{Descrizione:} un amministratore pu\`{o} visualizzare a video le stanze filtrate per uno stato attuale, ovvero abilitate al momento;
@@ -39,7 +39,7 @@
 \end{itemize}
 
 
-\paragraph{UC-11.3 Ricerca ricerca stanze disabilitate}
+\paragraph{UC-11.3 Visualizzazione stanze disabilitate}
 \begin{itemize}
     \item \textbf{Attori:} amministratore;
     \item \textbf{Descrizione:} un amministratore pu\`{o} visualizzare a video le stanze filtrate per uno stato attuale, ovvero disabilitate al momento;
