--- a/DocumentiEsterni/AnalisiDeiRequisiti/src/CasiDUso/src/ApplicazioneWeb/src/GestioneMonitoraggioStanze.tex
+++ b/DocumentiEsterni/AnalisiDeiRequisiti/src/CasiDUso/src/ApplicazioneWeb/src/GestioneMonitoraggioStanze.tex
@@ -204,16 +204,16 @@
 \end{itemize}
 
 %TODO relativo UC mostra nome/cognome utenti stanza selezionata???
-\paragraph{UC-13.3 Visualizzazione utenti presenti nella singola stanza}
+\paragraph{UC-13.3 Visualizzazione numero utenti presenti nella singola stanza}
 \begin{itemize}
     \item \textbf{Attori:} amministratore;
-    \item \textbf{Descrizione:} un amministratore pu\`{o} visualizzare a video una lista di utenti presenti all'interno di una stanza precedentemente selezionata;
+    \item \textbf{Descrizione:} un amministratore pu\`{o} visualizzare a video il totale degli utenti presenti all'interno di una stanza precedentemente selezionata;
     \item \textbf{Precondizione:} l'amministratore sta visualizzando a video i dettagli di una stanza selezionata;
-    \item \textbf{Postcondizione:} l'amministratore visualizza la lista di utenti presenti all'interno della stanza selezionata;
+    \item \textbf{Postcondizione:} l'amministratore visualizza a video il numero di utenti presenti all'interno della stanza selezionata;
     \item \textbf{Scenario principale:}
     \begin{itemize}
         \item l'amministratore seleziona la funzionalità di visualizzazione di tutti gli utenti presenti al momento nella singola stanza selezionata;
-        \item l'amministratore visualizza a video una lista di utenti presenti all'interno della stanza selezionata. Se non sono presenti utenti all'interno della stanza selezionata non verrà mostrato a video alcun risultato.
+        \item l'amministratore visualizza a video il numero di utenti presenti all'interno della stanza selezionata.
     \end{itemize}
 \end{itemize}
 
