--- a/DocumentiEsterni/AnalisiDeiRequisiti/src/CasiDUso/src/ApplicazioneWeb/src/GestioneMonitoraggioStanze.tex
+++ b/DocumentiEsterni/AnalisiDeiRequisiti/src/CasiDUso/src/ApplicazioneWeb/src/GestioneMonitoraggioStanze.tex
@@ -223,11 +223,11 @@
     \item \textbf{Attori:} amministratore;
     \item \textbf{Descrizione:} un amministratore pu\`{o} visualizzare a video una lista di utenti presenti in tutte le stanze registrate all'interno del sistema;
     \item \textbf{Precondizione:} l'amministratore si trova nella pagina di visualizzazione delle stanze registrate nell'applicazione web;
-    \item \textbf{Postcondizione:} l'amministratore visualizza la lista di tutti gli utenti presenti all'interno di tutte le stanze registrate nel sistema;
+    \item \textbf{Postcondizione:} l'amministratore visualizza il numero di utenti presenti all'interno di tutte le stanze registrate nel sistema;
     \item \textbf{Scenario principale:}
     \begin{itemize}
         \item l'amministratore seleziona la funzionalità di visualizzazione di tutti gli utenti presenti all'interno di tutte le stanze registrate nel sistema;
-        \item l'amministratore visualizza a video una lista di utenti. Se non sono presenti utenti all'interno di alcuna stanza registrata nel sistema, non verrà mostrato a video alcun risultato.
+        \item l'amministratore visualizza a video il numero di utenti all'interno di tutte le stanze censite nel sistema.
     \end{itemize}
 \end{itemize}
 
