--- a/DocumentiEsterni/AnalisiDeiRequisiti/src/CasiDUso/src/ApplicazioneMobile/src/UtilizzoIgienizzatore.tex
+++ b/DocumentiEsterni/AnalisiDeiRequisiti/src/CasiDUso/src/ApplicazioneMobile/src/UtilizzoIgienizzatore.tex
@@ -1,3 +1,26 @@
 \paragraph{UC-45 Visualizzazione stanze da igienizzare}
+\begin{itemize}
+    \item \textbf{Attori:} igienizzatore;
+    \item \textbf{Descrizione:} un igienizzatore pu\`{o} visualizzare a video l'elenco delle stanze che necessitano di essere igienizzate;
+    \item \textbf{Precondizione:} l'igienizzatore ha avviato l'applicazione;
+    \item \textbf{Postcondizione:} l'igienizzatore visualizza l'elenco di tutte le stanze da igienizzare censite nel sistema;
+    \item \textbf{Scenario principale:}
+    \begin{itemize}
+        \item l'igienizzatore avvia l'applicazione mobile;
+        \item l'applicazione mostra a video un elenco di stanze da igienizzare.
+    \end{itemize}
+\end{itemize}
 
 \paragraph{UC-46 Marcatura stanza come igienizzata}
+\begin{itemize}
+    \item \textbf{Attori:} igienizzatore;
+    \item \textbf{Descrizione:} un igienizzatore pu\`{o} marcare una stanza come igienizzata. Marcandola come tale, ogni postazione al suo interno viene marcata come igienizzata;
+    \item \textbf{Precondizione:} l'igienizzatore visualizza l'elenco di tutte le stanze da igienizzare censite nel sistema;
+    \item \textbf{Postcondizione:} l'igienizzatore ha marcato una stanza come igienizzata;
+    \item \textbf{Scenario principale:}
+    \begin{itemize}
+        \item l'igienizzatore visualizza a video un elenco di stanze da igienizzare;
+	\item l'igienizzatore seleziona la stanza che desidera igienizzare;
+        \item l'igienizzatore marca la stanza come igienizzata tramite utilizzo dell'apposita funzionalità.
+    \end{itemize}
+\end{itemize}
